# PoE-Pvt-League-Ranker-Overlay

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  config.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: manual.yml
pplo/: __main__.py  charData.py  overlay.py  plData.py
pplo/data/: classes.json
pplro/: __main__.py  api.py  charData.py  logger.py
pplro-electronjs/: electronjs-DEVNOTES.md  package-lock.json  package.json
pplro-electronjs/src/: index.css  index.html  index.js  renderer.js
pplro-electronjs/src/components/launchControls/: launchControls.ejs  launchControlsHandler.js  launchControlsScripts.js
pplro-electronjs/src/components/main/: mainScripts.js
pplro-electronjs/src/components/menubar/: menubar.js
pplro-electronjs/src/components/navbar/: navbar.ejs  navbarHandler.js  navbarScripts.js
pplro-electronjs/src/components/rank/: rank.css  rank.ejs  rankHandler.js  rankScripts.js
pplro-electronjs/src/components/rankWindow/: rankWindow.css  rankWindow.html  rankWindowHandler.js  rankWindowScripts.js
pplro-electronjs/src/components/settings/: settings.css  settings.ejs  settingsHandler.js  settingsScripts.js
pplro-electronjs/src/components/utils/: promiseHandler.js
pplro-python/: __main__.specBACKUP  pyproject.toml  requirements.txt
pplro-python/src/: __init__.py  __main__.py  account.py  api.py  charData.py  leagueData.py
pplro-python/src/models/: account.py
pplro/html/templates/: settings.html
pplro/models/: errorResponse.py
test/: test_charData.py  test_plData.py
test/mockData/: rankData.json
(+8 files in other folders)
